fixed overlap issue with negativ margins (e.g. grid static followed by a button link container)

--- a/scss/content-sections/_app-content-plugin.scss
+++ b/scss/content-sections/_app-content-plugin.scss
@@ -5,6 +5,15 @@ List View (this includes ALL plugin templates such as Grid (Static), Table, and 
 */
 
 .app-list {
+
+    // fixes overlap issue with negativ margins (e.g. grid static followd by a button link container)
+    position: relative;
+    z-index: 1;
+    + .content-plugin {
+        position: relative;
+        z-index: 2;
+    }
+
     &__detail-link {
         @include button-base();
         @include button-variation($app-list-btn-variation);
